--- a/bootstrap.ipynb
+++ b/bootstrap.ipynb
@@ -345,17 +345,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 5) Explain why you obtain difference results for Monte Carlo and complete enumeration bootstrap."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample correlation coefficient: 0.8131032177037834\n",
+      "Standard error: 0.1569612210428214\n",
+      "95% confidence interval: (0.5008025720905414, 1.116079252517262)\n",
+      "Wall time: 51.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Same dataset used as in the complete enumeration bootstrap\n",
+    "law_ex5 = new_law\n",
+    "\n",
+    "# Monte Carlo bootstrap\n",
+    "r_obs = np.corrcoef(law_ex5['LSAT'], law_ex5['GPA'])[0, 1]\n",
+    "B = 10000\n",
+    "\n",
+    "r_mc = []\n",
+    "for i in range(B):\n",
+    "    idx = np.random.choice(law_ex5.index, size=len(law_ex5), replace=True)\n",
+    "    r = np.corrcoef(law_ex5.loc[idx, 'LSAT'], law_ex5.loc[idx, 'GPA'])[0, 1]\n",
+    "    r_mc.append(r)\n",
+    "\n",
+    "se_mc = np.std(r_mc, ddof=1)\n",
+    "ci_mc = stats.norm.interval(0.95, loc=np.mean(r_mc), scale=se_mc)\n",
+    "\n",
+    "print('Sample correlation coefficient:', r_obs)\n",
+    "print('Standard error:', se_mc)\n",
+    "print('95% confidence interval:', ci_mc)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5) Explain why you obtain difference results for Monte Carlo and complete enumeration bootstrap."
+    "As you can see the correlation coefficient is the same (because the same dataset was used), but the standard error is less (due to the randomness introduced) AND it needs less time. The confidence intervals overlap, but the one from the Monte Carlo bootstrap is narrower, as it is preciser (like the smaller standard error indicates)."
    ]
   },
   {
