--- a/bootstrap.ipynb
+++ b/bootstrap.ipynb
@@ -252,35 +252,46 @@
    ],
    "source": [
     "%%time\n",
+    "# Converts Gray codes to indices \n",
     "def get_sample(gray_c):\n",
     "        samp = []\n",
     "        for i in range(len(gray_c)):\n",
+    "            #if gray code has a non-zero instance, add it to the sample\n",
     "            if gray_c[i]>0:\n",
     "                samp.extend([i]*int(gray_c[i]))\n",
     "        return samp  \n",
     "    \n",
+    "# Initialize Gray codes matrix of size m*n where m is the number of combinations and n is the number of data points    \n",
     "n = len(new_law)\n",
-    "i = 1\n",
-    "total = np.math.comb(2*n - 1, n - 1)\n",
-    "gray_codes = np.zeros((total, n))\n",
+    "m = np.math.comb((2*n)-1, n-1)\n",
+    "gray_codes = np.zeros((m, n))\n",
     "\n",
-    "r = np.zeros(n)\n",
-    "r[0] = n\n",
-    "t = n\n",
+    "# Initialize a temporary list to change indices, ki = 0(since we initialised a zero list)\n",
+    "k = np.zeros(n)\n",
+    "# k[1] = n, t=k[h]=n \n",
+    "k[0],t = n,n\n",
+    "# h=first i with ki!=0, only non-zero element is k[0]=n\n",
     "h = 0\n",
-    "gray_codes[i-1, :] = get_sample(r)\n",
-    "i += 1\n",
+    "# First instance of Gray codes is stored as sequence of indices\n",
+    "gray_codes[0] = get_sample(k)\n",
     "\n",
-    "while r[n-1] != n:\n",
-    "    if t != 1:\n",
-    "        h = 0\n",
-    "    h += 1\n",
-    "    t = r[h-1]\n",
-    "    r[h-1] = 0\n",
-    "    r[0] = t - 1\n",
-    "    r[h] += 1\n",
-    "    gray_codes[i-1, :] = get_sample(r)\n",
-    "    i += 1"
+    "for i in range(1,m):\n",
+    "    # Stop when k[n]=n\n",
+    "    if k[-1] != n:\n",
+    "        # Set t=k[h],k[h]=0,k[i]=t-1,k[n+1]=k[n+1]+1\n",
+    "        t = k[h]\n",
+    "        k[h] = 0\n",
+    "        k[0] = t - 1\n",
+    "        k[h+1] += 1\n",
+    "        # Update h\n",
+    "        if t != 1:\n",
+    "            h = -1\n",
+    "        h += 1\n",
+    "        # Store the ith instance as sequence of indices\n",
+    "        gray_codes[i] = get_sample(k)\n",
+    "        \n",
+    "    else:   \n",
+    "        break"
    ]
   },
   {
